@@ -234,7 +234,7 @@ static const char *const nodetypes[] = {
 	"Node_val",
 	"Node_regex",
 	"Node_dynregex",
-	"Node_hardregex",
+	"Node_typedregex",
 	"Node_var",
 	"Node_var_array",
 	"Node_var_new",
@@ -1363,7 +1363,7 @@ setup_frame(INSTRUCTION *pc)
 			r->var_value = m;
 			break;
 
-		case Node_hardregex:
+		case Node_typedregex:
 			r->type = Node_var;
 			r->var_value = m;
 			break;
