@@ -351,11 +351,11 @@ re_update(NODE *t)
 		/* regex was compiled with settings matching IGNORECASE */
 		if ((t->re_flags & CONSTANT) != 0) {
 			/* it's a constant, so just return it as is */
-			assert(t->type == Node_regex || t->type == Node_hardregex);
+			assert(t->type == Node_regex || t->type == Node_typedregex);
 			return t->re_reg;
 		}
 		t1 = t->re_exp;
-		if (t1->type == Node_hardregex) {
+		if (t1->type == Node_typedregex) {
 			assert((t1->re_flags & CONSTANT) != 0);
 			return t1->re_reg;
 		}
