@@ -1,3 +1,8 @@
+2015-05-11         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awk.h, awkgram.y, builtin.c, eval.c profile.c, re.c:
+	Change Node_hardregex to Node_typedregex everywhere.
+
 2015-05-05         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.y (yylex): Yet Another Fix for parsing bracket
